feat: Add aria-label to select

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </section>
     <section id="main-content-wrapper">
       <div class="filter-options">
-        <h2 aria-labelledby="neighborhoods-select">Filter Results</h2>
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+        <h2>Filter Results</h2>
+        <select aria-label="Select neighborhoods" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+        <select aria-label="Select cuisines" id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select>
       </div>
