--- a/index.html
+++ b/index.html
@@ -14,29 +14,31 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <h1><a href="/">Restaurant Reviews</a></h1>
-      </nav>
-    </header>
+    <div id="wrapper">
+      <header>
+        <nav>
+          <h1><a href="/">Restaurant Reviews</a></h1>
+        </nav>
+      </header>
 
-    <main id="maincontent">
-      <section id="map-container">
-        <div id="map"></div>
-      </section>
-      <section id="main-content-wrapper">
-        <div class="filter-options">
-          <h2>Filter Results</h2>
-          <select aria-label="Select neighborhoods" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
-            <option value="all">All Neighborhoods</option>
-          </select>
-          <select aria-label="Select cuisines" id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
-            <option value="all">All Cuisines</option>
-          </select>
-        </di  v>
-        <ul id="restaurants-list"></ul>
-      </section>
-    </main>
+      <main id="maincontent">
+        <section id="map-container">
+          <div id="map"></div>
+        </section>
+        <section id="main-content-wrapper">
+          <div class="filter-options">
+            <h2>Filter Results</h2>
+            <select aria-label="Select neighborhoods" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+              <option value="all">All Neighborhoods</option>
+            </select>
+            <select aria-label="Select cuisines" id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+              <option value="all">All Cuisines</option>
+            </select>
+          </div>
+          <ul id="restaurants-list"></ul>
+        </section>
+      </main>
+    </div>
 
     <footer id="footer">
       Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
