--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <div id="wrapper">
       <header>
         <nav>
-          <h1><a href="/">Restaurant Reviews</a></h1>
+          <h1>
+            <a href="/" aria-label="Restaurant reviews main page">Restaurant Reviews</a>
+          </h1>
         </nav>
       </header>
 
