--- a/restaurant.html
+++ b/restaurant.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Application to find the best restaurant on the word.">
     <!-- Normalize.css for better cross-browser consistency -->
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
     <!-- Google Web Font -->
@@ -48,7 +49,7 @@
       <section id="restaurant-container">
         <div>
           <h1 id="restaurant-name"></h1>
-          <img id="restaurant-img">
+          <picture id="restaurant-img"></picture>
         </div>
         <div>
           <p id="restaurant-address"></p>
