--- a/restaurant.html
+++ b/restaurant.html
@@ -6,6 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Application to find the best restaurant on the word.">
+    <link rel="manifest" href="manifest.json">    
     <!-- Normalize.css for better cross-browser consistency -->
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
     <!-- Google Web Font -->
@@ -72,6 +73,15 @@
     <!-- End footer -->
 
     <!-- Beginning scripts -->
+    <script>
+      // Check that service workers are registered
+      if ('serviceWorker' in navigator) {
+        // Use the window load event to keep the page load performant
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js');
+        });
+      }
+    </script>
     <!-- Database helpers -->
     <script defer type="text/javascript" src="js/dbhelper.js"></script>
     <!-- Main javascript file -->
