fix: Chang root path to index.html only for demo page purposes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="mask-icon" href="img/icons/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#ffc40d">
     <meta name="msapplication-TileImage" content="img/icons/mstile-144x144.png">
-    <meta name="theme-color" content="#3F51B5">
+    <meta name="theme-color" content="#00549c">
     <link rel="manifest" href="manifest.json">
     <!-- Normalize.css for better cross-browser consistency -->
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css">
@@ -28,7 +28,7 @@
       <header>
         <nav>
           <h1>
-            <a href="/" aria-label="Restaurant reviews main page">Restaurant Reviews</a>
+            <a href="index.html" aria-label="Restaurant reviews main page">Restaurant Reviews</a>
           </h1>
         </nav>
       </header>
