--- a/restaurant.html
+++ b/restaurant.html
@@ -13,7 +13,7 @@
     <link rel="mask-icon" href="img/icons/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#ffc40d">
     <meta name="msapplication-TileImage" content="img/icons/mstile-144x144.png">
-    <meta name="theme-color" content="#3F51B5">
+    <meta name="theme-color" content="#00549c">
     <link rel="manifest" href="manifest.json">    
     <!-- Normalize.css for better cross-browser consistency -->
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
@@ -30,14 +30,14 @@
       <!-- Beginning nav -->
       <nav>
         <h1>
-          <a href="/" aria-label="Restaurant reviews main page">Restaurant Reviews</a>
+          <a href="index.html" aria-label="Restaurant reviews main page">Restaurant Reviews</a>
         </h1>
       </nav>
       <!-- Beginning breadcrumb -->
       <nav id="breadcrumb-nav">
         <ul id="breadcrumb">
           <li>
-            <a href="/" aria-label="Back to main page">Home</a>
+            <a href="index.html" aria-label="Back to main page">Home</a>
           </li>
         </ul>
       </nav>
