fix: Add role="application" to map container

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </header>
 
       <main id="maincontent">
-        <section id="map-container">
+        <section id="map-container" role="application">
           <div id="map"></div>
         </section>
         <section id="main-content-wrapper">
