--- a/restaurant.html
+++ b/restaurant.html
@@ -34,10 +34,10 @@
         </h1>
       </nav>
       <!-- Beginning breadcrumb -->
-      <nav id="breadcrumb-nav">
+      <nav id="breadcrumb-nav" aria-label="Breadcrumb">
         <ul id="breadcrumb">
           <li>
-            <a href="index.html" aria-label="Back to main page">Home</a>
+            <a href="index.html">Home</a>
           </li>
         </ul>
       </nav>
