fix: Add maps role="application"

--- a/restaurant.html
+++ b/restaurant.html
@@ -49,7 +49,7 @@
     <!-- Beginning main -->
     <main id="maincontent">
       <!-- Beginning map -->
-      <section id="map-container">
+      <section id="map-container" role="application">
         <div id="map"></div>
       </section>
       <!-- End map -->
