feat: Add lazysizes script

--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,7 @@
     <footer id="footer">
       Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
     </footer>
+    <script src="js/lazysizes.min.js" async=""></script>
     <script defer type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
     <script defer type="application/javascript" charset="utf-8" src="js/main.js"></script>
     <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTyFdrSH8mZ6JHxnR2YBK6NSVSOZgg8Ug&libraries=places&callback=initMap"></script>
